tests/invalid/type/catch_non_exception.pts
function main() : void {
    try {
        int x = 1;
    } catch (int e) {
        int y = 2;
    }
}
